--- a/src/css/Landingpage.css
+++ b/src/css/Landingpage.css
@@ -9,7 +9,6 @@
   .logo {
     width: 300px; 
     height: 300px; 
-    background-color: white;
   }
   
   .button-row {
@@ -18,9 +17,14 @@
   }
   
   .circle-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: 60px; 
+    height: 60px;
     border: 6px solid #0074D9;
-    border-radius: 500%;
-    padding: 10px 20px;
+    border-radius: 50%;
     cursor: pointer;
     font-weight: bold;
     background-color: #0074D9;
@@ -28,15 +32,35 @@
     transition: background-color 0.3s;
   }
   
+  .button-text {
+    margin: 0;
+  }
+  
   .circle-button:hover {
     background-color: #0056b3;
   }
   
   .input-field {
-    width: 50%; /* Adjust the input field width as needed */
+    width: 50%; 
     padding: 10px;
     border: 2px solid #ccc;
     border-radius: 5px;
     margin-top: 10px;
   }
+  .submit-button {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      width: 60px; 
+      height: 60px;
+      border: 6px solid #0074D9;
+      border-radius: 50%;
+      cursor: pointer;
+      font-weight: bold;
+      background-color: #0074D9;
+      color: white;
+      transition: background-color 0.3s;
+    }
+  
   
