--- a/src/css/Landingpage.css
+++ b/src/css/Landingpage.css
@@ -63,4 +63,28 @@
       transition: background-color 0.3s;
     }
   
+    @media screen and (max-width: 600px) {
+      .circle-button-container {
+        padding: 10px;
+      }
+    
+      .logo {
+        width: 200px;
+        height: 200px;
+      }
+    
+      .button-row {
+        gap: 5px;
+      }
+    
+      .circle-button {
+        width: 40px;
+        height: 40px;
+        border: 4px solid #0074D9;
+      }
+    
+      .input-field {
+        width: 80%;
+      }
+    }
   
