--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,6 @@
-
-html, body {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
 body {
+  min-height: 100vh;
   background: linear-gradient(to bottom, #ffffff, #f5f5f5);
+  background-repeat: no-repeat;
+
 }
