--- a/src/css/Landingpage.css
+++ b/src/css/Landingpage.css
@@ -62,6 +62,27 @@
       color: white;
       transition: background-color 0.3s;
     }
+    .circle-button-container {
+      display: flex;
+      flex-direction: column; 
+      align-items: center; 
+      text-align: center;
+    }
+    
+    .logo-heading-container {
+      display: flex;
+      align-items: center;
+    }
+    
+    .small-logo {
+      width: 200px;
+      height: 200px;
+      margin-right: 10px; 
+    }
+    
+    .logo-heading {
+      font-size: 24px; 
+    }
   
     @media screen and (max-width: 600px) {
       .circle-button-container {
