--- a/src/App.css
+++ b/src/App.css
@@ -2,5 +2,8 @@ body {
   min-height: 100vh;
   background: linear-gradient(to bottom, #ffffff, #f5f5f5);
   background-repeat: no-repeat;
-
+  border-left: 1px solid #000; /* Add a 1px solid black border on the left */
+  border-right: 1px solid #000; /* Add a 1px solid black border on the right */
+  margin-left: 100px;
+  margin-right: 100px;
 }
