--- a/src/css/Landingpage.css
+++ b/src/css/Landingpage.css
@@ -13,10 +13,12 @@
   
   .button-row {
     display: flex;
-    gap: 10px;
+    gap: 60px;
+    margin-bottom: 15px;
   }
   
   .circle-button {
+    font-family: 'Proxima Nova', sans-serif;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -41,13 +43,16 @@
   }
   
   .input-field {
+    font-family: 'Proxima Nova', sans-serif;
     width: 50%; 
     padding: 10px;
     border: 2px solid #ccc;
     border-radius: 5px;
     margin-top: 10px;
   }
-  .submit-button {
+  .submit-button { 
+    margin-top: 30px;
+    font-family: 'Proxima Nova', sans-serif;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -71,6 +76,7 @@
     
     .logo-heading-container {
       display: flex;
+      font-family: 'Proxima Nova', sans-serif;
       align-items: center;
     }
     
@@ -84,6 +90,10 @@
       font-size: 24px; 
     }
   
+    .input-field-container{
+      gap: 20px;
+    }
+
     @media screen and (max-width: 600px) {
       .circle-button-container {
         padding: 10px;
