--- a/src/css/Blog.css
+++ b/src/css/Blog.css
@@ -1,3 +1,12 @@
+.body-Card {
+  min-height: 100vh;
+  background: linear-gradient(to bottom, #ffffff, #eeddc8);
+  background-repeat: no-repeat;
+  border-left: 1px solid #000; 
+  border-right: 1px solid #000; 
+  margin-left: 100px;
+  margin-right: 87px;
+}
 .card-column {
     display: flex;
     flex-direction: column;
@@ -11,7 +20,7 @@
     align-items: center;
     padding: 10px;
     margin: 10px;
-    background-color: #ebe7e7;
+    background-color: #eeddc8;
   }
   
   img {
@@ -39,18 +48,21 @@
     font-family: 'Proxima Nova', sans-serif;
     flex-direction: column;
   }
+  .button-container {
+    display: flex;
+    justify-content: flex-end; 
+    margin-right: 300px; 
+  }
+  
   .load-more-button {
-    background: transparent; 
-    color: #0074D9; 
-    border: none; 
-    padding: 10px 20px; 
+    background: transparent;
+    color: #0074D9;
+    border: none;
+    padding: 10px 20px;
     cursor: pointer;
     font-size: 16px;
-    border-radius: 5px; 
-    transition: background-color 0.3s; 
-    margin-left: auto; 
-    position: absolute;
-    right: 300px;
+    border-radius: 5px;
+    transition: background-color 0.3s;
   }
   
   .load-more-button:hover {
