--- a/src/newApp.css
+++ b/src/newApp.css
@@ -200,3 +200,158 @@
     justify-content: center;
     margin-top: 100px;
 }
+.container-container-card10 {
+    max-width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    gap: 100px;
+  }
+  
+  .container-container-card10 img {
+    width: 1200px;
+    height: auto; 
+    border-radius: 10%;
+  }
+  
+  .text-text-container {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .text-text-container h1 {
+    font-size: 24px;
+    margin-bottom: 0;
+    font-family: 'Proxima Nova',sans-serif;
+  }
+  
+  .text-text-container p {
+    font-size: 20px;
+    margin-bottom: 10px;
+    font-family: 'Proxima Nova',sans-serif;
+  }
+
+  .container-container-card11 {
+    max-width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    gap: 150px;
+  }
+  .container-container-card11 img {
+    width: 1200px;
+    height: auto; 
+    border-radius: 10%;
+  }
+
+.container-container-card12 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    gap: 150px;
+  }
+  
+  .head4 {
+    font-size: 28px;
+    margin-top: 20px;
+    max-width: 600px; 
+  }
+  
+  .p12 {
+    font-size: 18px;
+    margin: 10px 0;
+    max-width: 600px; 
+  }
+  
+  .slider-container {
+    width: 100%;
+    max-width: 600px; 
+    margin: 20px;
+    overflow: hidden;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+  
+  .slider-image {
+    width: 100%;
+    height: auto;
+  }
+  
+  .center-center-text {
+    display: flex;
+    flex-direction: row; 
+    align-items: center;
+    justify-content: center; 
+  }
+  .head5{
+    text-align: center;
+    font-size: 50px;
+    font-family: 'Proxima Nova',sans-serif;
+  }
+  p{
+    font-family: 'Proxima Nova',sans-serif;
+  }
+  h3{
+    font-family: 'Proxima Nova',sans-serif;
+  }
+
+.centered-divs-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+  
+  .centered-div {
+    text-align: center;
+    margin: 20px;
+    width: 700px;
+  }
+  
+  .centered-div img {
+    width: 100px; 
+    height: 100px; 
+    background-color: transparent; 
+  }
+  .footer-footerland{
+    background-color: transparent;
+   background-image:  linear-gradient(180deg, var( --e-global-color-ac7ac1f ) 0%, #F1F4F8 18%);
+  }
+  .button-talks {
+    display: flex;
+    width: 200px;
+    justify-content: center;
+    align-items: center;
+    background-color: brown;
+    border: none;
+    padding: 10px;
+    border-radius: 10px;
+    color: white;
+    cursor: pointer;
+    font-size: 18px;
+    margin-left: 850px;
+    transition: box-shadow 0.3s;
+    transition: transform 0.3s ease-in-out; 
+  }
+  
+  .button-talks:hover {
+    transform: scale(0.8); 
+  }
+  .link-Column {
+    display: flex;
+    flex-direction: column;
+    color: #797979;
+    gap: 10px;
+    font-family: 'Proxima Nova', sans-serif;
+  }
+  
+  .link-heads {
+    color: #797979;
+    font-family: 'Proxima Nova', sans-serif;
+  }
+  .container-headlinks{
+    display: flex;
+    justify-content: center;
+    margin-top: 100px;
+    gap: 200px;
+    margin-bottom: 100px;
+  }
